--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,12 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <link rel="stylesheet" href="">
         <style>
+            
         </style>
     </head>
     <body onload="scrollSection()" class="text-white ">
             <div 
-                class="relative top-0 left-0 w-screen h-screen overflow-y-scroll [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
+                class="relative top-0 left-0 w-screen h-screen scroll-smooth  overflow-y-scroll [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
             
             <div class="h-min w-full flex bg-transparent text-white fixed top-0 z-10 align-items-center">
                 <div class="m-5 basis-1/2">
@@ -77,33 +78,33 @@
                 <form id="queryForms" action="/submit" method="POST" class="mt-10 md:w-[50rem] flex flex-col items-center gap-2">
                     <div class="grid md:grid-cols-[150px_250px] gap-6 mb-10 text-left items-center">
                         <label for="studentname">Student Name:</label>
-                        <input class="border border-black" type="text" id="sname" name="studentname">
+                        <input class="text-black border border-black" type="text" id="sname" name="studentname">
                         <label for="studentdetails">Student Details:<br>(Optional)</label>
-                        <input class="border border-black h-min placeholder:text-sm" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
+                        <input class="text-black border border-black h-min placeholder:text-sm" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
                         <label for="parentname">Parent Name:<br>(Optional)</label>
-                        <input class="border border-black h-min" type="text" id="pname" name="parentname">
+                        <input class="text-black border border-black h-min" type="text" id="pname" name="parentname">
                         <label for="reason">Reason:</label>
                         <div class="flex flex-col gap-2">
-                            <select id="reason" class="  border border-black" name="reason" form="queryForms">
-                                <option value="">Select a Reason</option>
+                            <select id="reason" class="text-black border border-black" name="reason" form="queryForms">
+                                <option value="" class="">Select a Reason</option>
                                 <option value="medicallbg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-[#1d4ed8] via-[#1e40af] to-[#111827]eave">Medical Leave</option>
                                 <option value="personalreasons">Personal Reasons</option>
                                 <option value="eventparticipation">Event Participation</option>
                                 <option value="others">Others</option>
                             </select>
-                            <input type="text" id="otherReason" name="otherReason" class="hidden border border-black"> 
+                            <input type="text" id="otherReason" name="otherReason" class="text-black hidden border border-black"> 
                         </div>
                         <label for="date">Date & Time:</label>
                         <div class="flex flex-col gap-3">
                             <p class="block md:hidden">From:</p>
-                            <input class="dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
+                            <input class="text-black dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
                             <p class="block md:hidden">To:</p>
-                            <input class="dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
+                            <input class="text-black dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
                         </div>
                         <label for="otherDetails">Other Details:</label>
-                        <textarea id="otherDetails" name="otherdetails" class="border border-black placeholder:text-sm text-gray" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
+                        <textarea id="otherDetails" name="otherdetails" class="text-black border border-black placeholder:text-sm text-gray" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
                         <label for="email">Receiver email:</label>
-                        <input class="border border-black" type="email" id="email" name="email"> 
+                        <input class="text-black border border-black" type="email" id="email" name="email"> 
                     </div>
                     <div id="buttonGenerate" class="relative inline-flex items-center justify-center gap-4 group">
                         <div
@@ -113,8 +114,6 @@
                             type="submit"
                             value="Generate"
                             class="group relative inline-flex items-center justify-center text-xl rounded-xl bg-gray-900 px-12 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
-                            title="payment"
-                            href="#formsSection"
                             >
                         </input>
                         </div>
@@ -138,7 +137,7 @@
                 </div>
             </div>
 <% } %>
-             <div id="instructionsSection" class="h-screen flex flex-col items-center justify-evenly">
+             <div id="instructionsSection" class="scroll-smooth h-screen flex flex-col items-center justify-evenly">
                 <h1 class="text-6xl  text-center font-bold">
                     Step-by-Step Instructions to Use MailGuy
                 </h1>
@@ -193,7 +192,7 @@
             }});
             function scrollSection(){
             const section = document.getElementById('responseSection');
-            window.scrollTo({
+            section.scrollIntoView({
             top: section.offsetTop,
             behavior: 'smooth'
             });
