--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,39 +72,53 @@
                     </a>
                     </div>
             </div>
-            <div id="formsSection" class="h-screen py-10 flex justify-center ">
-                <div class=" py-5 w-fit flex flex-col items-center justify-center gap-5 ">
+            <div id="formsSection" class="h-fit py-10 flex justify-center ">
+                <div class=" py-5  flex flex-col items-center justify-center gap-5 ">
                 <h1 class="text-7xl font-bold">Fill the Form</h1>
-                <form id="queryForms" action="/submit" method="POST" class="mt-10 md:w-[50rem] flex flex-col items-center gap-2">
-                    <div class="grid md:grid-cols-[150px_250px] gap-6 mb-10 text-left items-center">
-                        <label for="studentname">Student Name:</label>
-                        <input class="text-black border border-black" type="text" id="sname" name="studentname">
-                        <label for="studentdetails">Student Details:<br>(Optional)</label>
-                        <input class="text-black border border-black h-min placeholder:text-sm" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
-                        <label for="parentname">Parent Name:<br>(Optional)</label>
-                        <input class="text-black border border-black h-min" type="text" id="pname" name="parentname">
-                        <label for="reason">Reason:</label>
-                        <div class="flex flex-col gap-2">
-                            <select id="reason" class="text-black border border-black" name="reason" form="queryForms">
-                                <option value="" class="">Select a Reason</option>
-                                <option value="medicallbg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-[#1d4ed8] via-[#1e40af] to-[#111827]eave">Medical Leave</option>
-                                <option value="personalreasons">Personal Reasons</option>
-                                <option value="eventparticipation">Event Participation</option>
-                                <option value="others">Others</option>
-                            </select>
-                            <input type="text" id="otherReason" name="otherReason" class="text-black hidden border border-black"> 
+                <form id="queryForms" action="/submit" method="POST" class="mt-10 flex flex-col items-center gap-2">
+                    <div class="grid md:grid-cols-[minmax(400px,_1fr)_minmax(400px,_1fr)] gap-10 mb-10 text-center justify-center items-center ">
+                        <div class="flex items-center justify-center">
+                            <label for="studentname" class="font-bold text-lg basis-[150px]">Student Name</label>
+                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">
                         </div>
-                        <label for="date">Date & Time:</label>
-                        <div class="flex flex-col gap-3">
-                            <p class="block md:hidden">From:</p>
-                            <input class="text-black dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
-                            <p class="block md:hidden">To:</p>
-                            <input class="text-black dateTime border border-black placeholder:text-sm" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
+                        <div class="flex items-center justify-center">
+                            <label for="studentdetails" class="font-bold text-lg basis-[150px]">Student Details<br>(Optional)</label>
+                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
                         </div>
-                        <label for="otherDetails">Other Details:</label>
-                        <textarea id="otherDetails" name="otherdetails" class="text-black border border-black placeholder:text-sm text-gray" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
-                        <label for="email">Receiver email:</label>
-                        <input class="text-black border border-black" type="email" id="email" name="email"> 
+                        <div class="flex items-center justify-center">
+                            <label for="parentname" class="font-bold text-lg basis-[150px]">Parent Name<br>(Optional)</label>
+                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
+                        </div>
+                        <div class="flex items-center justify-center">
+                            <label for="reason" class="font-bold text-lg basis-[150px]">Reason</label>
+                            <div class="flex flex-col gap-2 basis-[250px]">
+                                <select id="reason" class="border rounded-lg py-3 px-3 bg-black border-indigo-600 placeholder-white-500 text-white" name="reason" form="queryForms">
+                                    <option value="" class="">Select a Reason</option>
+                                    <option value="medicallbg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-[#1d4ed8] via-[#1e40af] to-[#111827]eave">Medical Leave</option>
+                                    <option value="personalreasons">Personal Reasons</option>
+                                    <option value="eventparticipation">Event Participation</option>
+                                    <option value="others">Others</option>
+                                </select>
+                                <input type="text" id="otherReason" name="otherReason" class="hidden border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white"> 
+                            </div>
+                        </div>
+                        <div class="flex items-center justify-center">
+                            <label for="date" class="font-bold text-lg basis-[150px]">Date & Time</label>
+                            <div class="flex flex-col gap-3">
+                                <p class="block md:hidden ">From:</p>
+                                <input class="dateTime border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
+                                <p class="block md:hidden">To:</p>
+                                <input class="dateTime border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
+                            </div>
+                        </div>
+                        <div class="flex justify-center items-center">
+                            <label for="otherDetails" class="font-bold text-lg basis-[150px]">Other Details</label>
+                            <textarea id="otherDetails" name="otherdetails" class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
+                        </div>
+                        <div class="flex items-center justify-center">
+                            <label for="email" class="font-bold text-lg basis-[150px]">Receiver email</label>         
+                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="email" id="email" name="email"> 
+                        </div>
                     </div>
                     <div id="buttonGenerate" class="relative inline-flex items-center justify-center gap-4 group">
                         <div
