--- a/views/index.ejs
+++ b/views/index.ejs
@@ -201,6 +201,10 @@
                 </ol>
                 <p class="text-4xl text-center font-bold m-5">That’s it—super easy!</p>
             </div>
+            <div class="bg-black text-neutral-300 py-10 mt-16 flex justify-center items-center gap-5">
+                <a href="#Home" class="text-2xl font-bold">MailGuy ©</a>
+                <p>Made by <a class="underline" href="https://github.com/dharaniis">Dharani I S</a></p>
+            </div>
         </div>
     </div>
         <script src="https://cdn.tailwindcss.com"></script>
