add mobile responsiveness Home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,19 +35,19 @@
                     <a href="#instructionsSection">Guide</a>
                 </div>
             </div>
-            <div id="Home" class="text-white h-screen w-full text-center flex flex-col gap-[50px] items-center justify-center  " >
+            <div id="Home" class="mx-5 md:mx-0 text-white h-screen text-center flex flex-col gap-5 md:gap-[50px] items-center justify-evenly md:justify-center" >
                 <div class="">
-                    <h1 class="mt-[80px] text-[90px] font-bold">The AI Email Writer</h1>
-                    <p class="mt-2 text-lg md:w-[50rem]">
+                    <h1 class="mt-[80px] text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
+                    <p class="mt-2 text-[14px] md:text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
                         and MailGuy will generate a polished email for you in seconds with a single click.
                     </p>
                 </div>
-                <div class="mt-10 font-bold w-full flex flex-row justify-center gap-[200px]">
-                    <p class="text-2xl">1. Fill the Form</p>
-                    <p class="text-2xl">2. Generate the Email</p>
-                    <p class="text-2xl">3. Send the Email</p>
+                <div class="md:text-2xl text-[15px] md:mt-10 font-bold w-full flex  md:flex-row justify-center gap-2 md:gap-[200px]">
+                    <p class="">1. Fill the Form</p>
+                    <p class="">2. Generate the Email</p>
+                    <p class="">3. Send the Email</p>
                 </div>
                 <div id="buttonHome" class="relative inline-flex items-center justify-center gap-4 group">
                     <div
@@ -55,7 +55,7 @@
                     ></div>
                     <a
                         role="button"
-                        class="group relative inline-flex items-center justify-center text-xl rounded-xl bg-gray-900 px-8 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
+                        class="group relative inline-flex items-center justify-center text-md md:text-xl rounded-xl bg-gray-900 px-8 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
                         title="payment"
                         href="#formsSection"
                         >Start Writing<svg
