--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,22 +22,25 @@
             <div 
                 class="relative top-0 left-0 w-screen h-screen scroll-smooth  overflow-y-scroll [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
             
-            <div class="h-min w-full flex bg-transparent text-white fixed top-0 z-10 align-items-center">
-                <div class="m-5 basis-1/2">
-                    <a href="#Home" class="text-4xl font-bold">MailGuy</a>
+            <nav class="h-min w-full flex flex-wrap bg-transparent text-white md:fixed top-0 z-10 align-items-center">
+                <div class="p-5 basis-1/2 shrink">
+                    <a href="#Home" class="text-4xl font-bold ">MailGuy</a>
                 </div>
-                <div class="text-lg basis-1/2 justify-end flex place-items-center gap-5 mx-7">
-                    <a href="#Home">Home</a>
-                    <a href="#formsSection">Form</a>
+                <div  class="md:hidden flex basis-1/2 items-center justify-end px-5">
+                    <button onclick="toggleButton()"><svg class="w-[50px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z" fill="#FFFF"></path> </g></svg></button>
+                </div>
+                <div id="navList" class="hidden w-full text-lg text-center md:basis-1/2 md:justify-end flex flex-col md:flex md:flex-row place-items-center gap-5 md:gap-5 mt-5 md:mt-0 md:px-7">
+                    <a class="block" href="#Home">Home</a>
+                    <a class="block" href="#formsSection">Form</a>
                     <% if (locals.response){ %> 
-                    <a href="#responseSection">Response</a>
+                    <a class="block" href="#responseSection">Response</a>
                     <% } %>
-                    <a href="#instructionsSection">Guide</a>
+                    <a class="block" href="#instructionsSection">Guide</a>
                 </div>
-            </div>
-            <div id="Home" class="mx-5 md:mx-0 text-white h-screen text-center flex flex-col gap-5 md:gap-[50px] items-center justify-evenly md:justify-center" >
+            </nav>
+            <div id="Home" class="mx-5 md:mx-0 text-white h-[600px] md:h-screen md:h-screen text-center flex flex-col gap-5 md:gap-[50px] items-center justify-evenly md:justify-center" >
                 <div class="">
-                    <h1 class="mt-[80px] text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
+                    <h1 class="md:mt-[80px] text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
                     <p class="mt-2 text-[14px] md:text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
@@ -234,7 +237,11 @@
             top: section.offsetTop,
             behavior: 'smooth'
             });
-        }
+            }
+            function toggleButton(){
+                document.getElementById("navList").classList.toggle("hidden");
+            }
+        
         </script>
     </body>
 </html>
