--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,12 @@
             <div 
                 class="relative top-0 left-0 w-screen h-screen scroll-smooth  overflow-y-scroll [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]">
             
-            <nav class="h-min w-full flex flex-wrap bg-transparent text-white md:fixed top-0 z-10 align-items-center">
+            <nav class="h-min w-full flex flex-wrap bg-black md:bg-transparent text-white sticky md:fixed top-0 z-10 align-items-center">
                 <div class="p-5 basis-1/2 shrink">
                     <a href="#Home" class="text-4xl font-bold ">MailGuy</a>
                 </div>
                 <div  class="md:hidden flex basis-1/2 items-center justify-end px-5">
-                    <button onclick="toggleButton()"><svg class="w-[50px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z" fill="#FFFF"></path> </g></svg></button>
+                    <button onclick="toggleButton()"><svg class="w-[40px]" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M4 5C3.44772 5 3 5.44772 3 6C3 6.55228 3.44772 7 4 7H20C20.5523 7 21 6.55228 21 6C21 5.44772 20.5523 5 20 5H4ZM7 12C7 11.4477 7.44772 11 8 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H8C7.44772 13 7 12.5523 7 12ZM13 18C13 17.4477 13.4477 17 14 17H20C20.5523 17 21 17.4477 21 18C21 18.5523 20.5523 19 20 19H14C13.4477 19 13 18.5523 13 18Z" fill="#FFFF"></path> </g></svg></button>
                 </div>
                 <div id="navList" class="hidden w-full text-lg text-center md:basis-1/2 md:justify-end flex flex-col md:flex md:flex-row place-items-center gap-5 md:gap-5 mt-5 md:mt-0 md:px-7">
                     <a class="block" href="#Home">Home</a>
@@ -39,8 +39,8 @@
                 </div>
             </nav>
             <div id="Home" class="mx-5 md:mx-0 text-white h-[600px] md:h-screen md:h-screen text-center flex flex-col gap-5 md:gap-[50px] items-center justify-evenly md:justify-center" >
-                <div class="">
-                    <h1 class="md:mt-[80px] text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
+                <div class="mt-[80px]">
+                    <h1 class=" text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
                     <p class="mt-2 text-[14px] md:text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
@@ -83,24 +83,24 @@
             </div>
             <div id="formsSection" class="h-fit py-10 flex justify-center ">
                 <div class=" py-5  flex flex-col items-center justify-center gap-5 ">
-                <h1 class="text-7xl font-bold">Fill the Form</h1>
+                <h1 class="mt-[80px] md:mt-0 text-6xl md:text-7xl text-center font-bold">Fill the Form</h1>
                 <form id="queryForms" action="/submit" method="POST" class="mt-10 flex flex-col items-center gap-2">
                     <div class="grid md:grid-cols-[minmax(400px,_1fr)_minmax(400px,_1fr)] gap-10 mb-10 text-center justify-center items-center ">
-                        <div class="flex items-center justify-center">
-                            <label for="studentname" class="font-bold text-lg basis-[150px]">Student Name</label>
-                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="studentname" class="font-bold text-md md:text-lg md:basis-[150px]">Student Name</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">
                         </div>
-                        <div class="flex items-center justify-center">
-                            <label for="studentdetails" class="font-bold text-lg basis-[150px]">Student Details<br>(Optional)</label>
-                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="studentdetails" class="font-bold text-md md:text-lg md:basis-[150px]">Student Details<br>(Optional)</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
                         </div>
-                        <div class="flex items-center justify-center">
-                            <label for="parentname" class="font-bold text-lg basis-[150px]">Parent Name<br>(Optional)</label>
-                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="parentname" class="font-bold text-md md:text-lg md:basis-[150px]">Parent Name<br>(Optional)</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
                         </div>
-                        <div class="flex items-center justify-center">
-                            <label for="reason" class="font-bold text-lg basis-[150px]">Reason</label>
-                            <div class="flex flex-col gap-2 basis-[250px]">
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="reason" class="font-bold text-md md:text-lg md:basis-[150px]">Reason</label>
+                            <div class="flex flex-col gap-2 md:basis-[250px]">
                                 <select id="reason" class="border rounded-lg py-3 px-3 bg-black border-indigo-600 placeholder-white-500 text-white" name="reason" form="queryForms">
                                     <option value="" class="">Select a Reason</option>
                                     <option value="medicallbg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-[#1d4ed8] via-[#1e40af] to-[#111827]eave">Medical Leave</option>
@@ -111,22 +111,22 @@
                                 <input type="text" id="otherReason" name="otherReason" class="hidden border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white"> 
                             </div>
                         </div>
-                        <div class="flex items-center justify-center">
-                            <label for="date" class="font-bold text-lg basis-[150px]">Date & Time</label>
-                            <div class="flex flex-col gap-3">
-                                <p class="block md:hidden ">From:</p>
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="date" class="font-bold text-md md:text-lg md:basis-[150px]">Date & Time</label>
+                            <div class="flex flex-col md:gap-3">
+                                <p class="block md:hidden  mt-2 ">From:</p>
                                 <input class="dateTime border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="datetime-local" id="date-start" name="datestart" placeholder="Select DateTime start">
-                                <p class="block md:hidden">To:</p>
+                                <p class="block md:hidden mt-2 ">To:</p>
                                 <input class="dateTime border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
                             </div>
                         </div>
-                        <div class="flex justify-center items-center">
-                            <label for="otherDetails" class="font-bold text-lg basis-[150px]">Other Details</label>
+                        <div class="flex md:flex-row flex-col justify-center items-center">
+                            <label for="otherDetails" class="font-bold text-md md:text-lg md:basis-[150px]">Other Details</label>
                             <textarea id="otherDetails" name="otherdetails" class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
                         </div>
-                        <div class="flex items-center justify-center">
-                            <label for="email" class="font-bold text-lg basis-[150px]">Receiver email</label>         
-                            <input class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="email" id="email" name="email"> 
+                        <div class="flex md:flex-row flex-col items-center justify-center">
+                            <label for="email" class="font-bold text-md md:text-lg md:basis-[150px]">Receiver email</label>         
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="email" id="email" name="email"> 
                         </div>
                     </div>
                     <div id="buttonGenerate" class="relative inline-flex items-center justify-center gap-4 group">
@@ -136,12 +136,12 @@
                         <input
                             type="submit"
                             value="Generate"
-                            class="group relative inline-flex items-center justify-center text-xl rounded-xl bg-gray-900 px-12 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
+                            class="group relative inline-flex items-center justify-center text-md md:text-xl rounded-xl bg-gray-900 px-12 py-3 font-semibold text-white transition-all duration-200 hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
                             >
                         </input>
                         </div>
                     <button
-                        class="bg-gray-900 text-white text-center w-48 rounded-2xl h-12 mt-2 relative text-black text-xl font-semibold hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
+                        class="bg-gray-900 text-white text-center px-16 py-3  rounded-2xl  mt-2 relative text-black text-md md:text-xl font-semibold hover:bg-gray-800 hover:shadow-lg hover:-translate-y-0.5 hover:shadow-gray-600/30"
                         type="button"
                         onclick="location.href='/';"
                         >Reset</button>
@@ -152,7 +152,7 @@
             <div id="responseSection" class="my-10 h-screen flex flex-col items-center justify-center">
                 <div class="md:w-[50rem] flex flex-col justify-center items-center gap-2 ">
                     <h1 class="text-center mt-[80px] text-7xl font-bold">Generated Response</h1>
-                    <div class="text-lg text-left">
+                    <div class="text-md md:text-lg text-left">
                         <pre class="text-wrap font-sans mt-10"><%= response %></pre>
                     </div>
                     <div id="buttonGenerate" class="relative inline-flex items-center justify-center gap-4 group">
