--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,14 +87,14 @@
                 <form id="queryForms" action="/submit" method="POST" class="mt-10 flex flex-col items-center gap-2">
                     <div class="grid md:grid-cols-[minmax(400px,_1fr)_minmax(400px,_1fr)] gap-10 mb-10 text-center justify-center items-center ">
                         <div class="flex md:flex-row flex-col items-center justify-center">
-                            <label for="studentname" class="font-bold text-md md:text-lg md:basis-[150px]">Student Name</label>
-                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">
+                            <label for="studentname" class="font-bold text-md md:text-lg md:basis-[150px]">Name</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">  
                         </div>
                         <div class="flex md:flex-row flex-col items-center justify-center">
-                            <label for="studentdetails" class="font-bold text-md md:text-lg md:basis-[150px]">Student Details<br>(Optional)</label>
-                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RollNo/Grade/Class/Department]">
+                            <label for="studentdetails" class="font-bold text-md md:text-lg md:basis-[150px]">Details<br>(Optional)</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RegNo/Class/Department]">
                         </div>
-                        <div class="flex md:flex-row flex-col items-center justify-center">
+                        <div class="flex md:flex-row flex-col items-center justify-center"> 
                             <label for="parentname" class="font-bold text-md md:text-lg md:basis-[150px]">Parent Name<br>(Optional)</label>
                             <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
                         </div>
