--- a/views/index.ejs
+++ b/views/index.ejs
@@ -106,8 +106,8 @@
                             <label for="details" class="font-bold text-md md:text-lg md:basis-[150px]">Details<br>(Optional)</label>
                             <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="details" placeholder="[RegNo/Class/Department]">
                         </div>
-                        <div class="flex md:flex-row flex-col items-center justify-center"> 
-                            <label for="parentname" class="font-bold text-md md:text-lg md:basis-[150px]">Parent Name<br>(Optional)</label>
+                        <div id="parentName" class="hidden flex md:flex-row flex-col items-center justify-center"> 
+                            <label for="parentname" class="font-bold text-md md:text-lg md:basis-[150px]">Parent Name</label>
                             <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
                         </div>
                         <div class=" flex md:flex-row flex-col items-center justify-center">
@@ -123,6 +123,10 @@
                                 <input type="text" id="otherReason" name="otherReason" class="hidden border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white"> 
                             </div>
                         </div>
+                        <div class="flex md:flex-row flex-col justify-center items-center">
+                            <label for="otherDetails" class="font-bold text-md md:text-lg md:basis-[150px]">Other Details</label>
+                            <textarea id="otherDetails" name="otherdetails" class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
+                        </div>
                         <div class="flex md:flex-row flex-col items-center justify-center">
                             <label for="date" class="font-bold text-md md:text-lg md:basis-[150px]">Date & Time</label>
                             <div class="flex flex-col md:gap-3">
@@ -131,10 +135,6 @@
                                 <p class="block md:hidden mt-2 ">To:</p>
                                 <input class="dateTime border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" type="datetime-local" id="date-end" name="dateend" placeholder="Select DateTime end">
                             </div>
-                        </div>
-                        <div class="flex md:flex-row flex-col justify-center items-center">
-                            <label for="otherDetails" class="font-bold text-md md:text-lg md:basis-[150px]">Other Details</label>
-                            <textarea id="otherDetails" name="otherdetails" class="border rounded-lg py-3 px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white" placeholder="Enter any additional specifics or comments for the prompt"></textarea>
                         </div>
                         <div class="flex md:flex-row flex-col items-center justify-center">
                             <label for="email" class="font-bold text-md md:text-lg md:basis-[150px]">Receiver email</label>         
@@ -243,6 +243,17 @@
                 otherInput.classList.remove("block");
                 otherInput.classList.add("hidden");
             }});
+
+            const dropdown2 = document.getElementById("user");
+            const parent = document.getElementById("parentName");
+            dropdown2.addEventListener("change", function(){
+                if (dropdown2.value === "parent") {
+                    parent.classList.remove("hidden");
+                } else {
+                    parent.classList.add("hidden");
+                }
+            })
+
             function scrollSection(){
             const section = document.getElementById('responseSection');
             section.scrollIntoView({
