add changes to content

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,9 +42,9 @@
                 <div class="mt-[80px]">
                     <h1 class=" text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
                     <p class="md:mt-5 text-[14px] md:text-lg md:w-[50rem]">
-                        MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
-                        Just fill out the simple form, provide the necessary details 
-                        and MailGuy will generate a polished email for you in seconds with a single click.
+                        MailGuy is your go-to assistant for writing leave request emails, powered by the Google Gemini.
+                        Whether you're an employee requesting time off, a parent notifying a school, or a student seeking leave, 
+                        MailGuy simplifies the process with a quick form that generates a polished email.
                     </p>
                 </div>
                 <div class="md:text-2xl text-[15px] md:mt-10 font-bold w-full flex  md:flex-row justify-center gap-2 md:gap-[200px]">
@@ -193,7 +193,7 @@
                 <ol class="md:w-[25rem] my-10 flex flex-col gap-5 justify-evenly list-none text-left">
                     <li class="font-bold text-3xl md:text-4xl flex items-center"><svg height="40px" width="50px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 496.158 496.158" xml:space="preserve" fill="#000000" data-darkreader-inline-fill=""><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path style="fill: #FFFF;" d="M248.082,0.003C111.07,0.003,0,111.061,0,248.085c0,137,111.07,248.07,248.082,248.07 c137.006,0,248.076-111.07,248.076-248.07C496.158,111.061,385.088,0.003,248.082,0.003z" data-darkreader-inline-fill=""></path> <path style="fill: rgb(0,0,0)" d="M278.767,145.419c-3.126-4.003-7.276-6.006-12.451-6.006c-4.591,0-7.716,0.879-9.375,2.637 c-1.662,1.758-5.226,6.445-10.693,14.063c-5.47,7.617-11.744,14.502-18.823,20.654c-7.082,6.152-16.53,12.012-28.345,17.578 c-7.91,3.712-13.429,6.738-16.553,9.082c-3.126,2.344-4.688,6.006-4.688,10.986c0,4.298,1.586,8.082,4.761,11.353 c3.172,3.273,6.812,4.907,10.913,4.907c8.592,0,25.292-9.521,50.098-28.564V335.41c0,7.814,1.806,13.722,5.42,17.725 c3.612,4.003,8.397,6.006,14.355,6.006c13.378,0,20.068-9.814,20.068-29.443V161.972 C283.455,154.941,281.892,149.425,278.767,145.419z" data-darkreader-inline-fill=""></path> </g></svg><p>Fill the Form</p></li>
                         <ul class="text-xs/6 md:text-sm/6 font-normal ml-10 list-disc">
-                            <li>Enter the student's name, parent name, and reason for the email.</li>
+                            <li>Select between Student/Parent/Employee and fill the details for the email.</li>
                             <li>Pick the start and end date and time for the leave using the calendar.</li>
                             <li>Add any other details or comments (optional).</li>
                             <li>Enter the receiver's email address.</li>
