add lg screen responsiveness

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -186,7 +186,7 @@
                 </div>
             </div>
 <% } %>
-             <div id="instructionsSection" class="scroll-smooth mx-5 h-fit md:h-screen flex flex-col items-center justify-evenly">
+             <div id="instructionsSection" class="scroll-smooth mx-5 h-fit xl:h-screen flex flex-col items-center justify-evenly">
                 <h1 class="text-5xl md:text-6xl  mt-[80px] text-center font-bold">
                     Step-by-Step Instructions
                 </h1>
